--- a/index.html
+++ b/index.html
@@ -11,18 +11,26 @@
     <section>
         <h1>HAPPY BIRTHDAY DEVI PINNI</h1>
     </section>
+
+
     <span>
         <img src="https://www.nicepng.com/png/full/171-1715300_clip-art-black-and-white-download-streamer-transparent.png" height="174">
     </span>
     <span>
         <img src="https://www.nicepng.com/png/full/171-1715300_clip-art-black-and-white-download-streamer-transparent.png" height="182">
     </span>
-<span id="message">
-    <h2>Happy Birthday<br>
-        To You<br> </h2>
-    <h3>DEVI PINNI</h3>
+
+    <hr>
+    <span>
+        <h2>Happy Birthday<br>
+            To You<br> </h2>
+        <h3>DEVI PINNI</h3>
     </span>
-    <span id="message">
-    <img src="https://www.kindpng.com/picc/m/106-1069054_transparent-bunch-balloons-clipart-happy-birthday-balloons-clip.png" height="600">
-    </span>
-</body></html>
+    <hr>
+
+<img src="https://media.istockphoto.com/vectors/colorful-gift-composition-different-gift-boxes-in-cartoon-style-of-vector-id859547674" height="500">
+    <img src="https://previews.123rf.com/images/clairev/clairev1103/clairev110300143/9199568-group-of-cartoon-balloons.jpg"height="500">
+    <h1>From Naveena</h1>
+
+</body>
+</html>
